# DeepSeekApp

./: README.md  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
